--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": "^8.1",
     "laravel/framework": "^10.0",
-    "guzzlehttp/guzzle": "^7.10"
+    "guzzlehttp/guzzle": "^7.10",
+    "domnikl/statsd": "^3.0"
   },
   "autoload": {
     "psr-4": {
