ci: use PHP 8.2 in workflow and add debug versions step

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.1"
+          php-version: "8.2"
           extensions: mbstring, bcmath, xml
           ini-values: memory_limit=2G
 
@@ -42,6 +42,11 @@ jobs:
         run: |
           php artisan key:generate --ansi || true
           php artisan migrate --force || true
+
+      - name: Debug: PHP and PHPUnit versions
+        run: |
+          php -v
+          vendor/bin/phpunit --version || true
 
       - name: Run PHPUnit
         run: vendor/bin/phpunit --colors=never
