--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -49,4 +49,13 @@ jobs:
           vendor/bin/phpunit --version || true
 
       - name: Run PHPUnit
-        run: vendor/bin/phpunit --colors=never
+        id: run-phpunit
+        run: |
+          vendor/bin/phpunit --colors=never --log-junit phpunit-result.xml || true
+
+      - name: Upload PHPUnit results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: phpunit-results
+          path: phpunit-result.xml
