--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,14 +1,14 @@
 parameters:
 	ignoreErrors:
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Access to an undefined property object\:\:\$role\.$#'
+			identifier: property.notFound
 			count: 1
 			path: app/Console/Commands/DevSeedUsers.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:where\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Call to an undefined method object\:\:save\(\)\.$#'
+			identifier: method.notFound
 			count: 1
 			path: app/Console/Commands/DevSeedUsers.php
 
@@ -17,30 +17,6 @@ parameters:
 			identifier: missingType.return
 			count: 1
 			path: app/Console/Commands/DevSeedUsers.php
-
-		-
-			message: '#^Access to an undefined property App\\Models\\Article\:\:\$content\.$#'
-			identifier: property.notFound
-			count: 1
-			path: app/Console/Commands/IndexSearchCommand.php
-
-		-
-			message: '#^Access to an undefined property App\\Models\\Article\:\:\$id\.$#'
-			identifier: property.notFound
-			count: 1
-			path: app/Console/Commands/IndexSearchCommand.php
-
-		-
-			message: '#^Access to an undefined property App\\Models\\Article\:\:\$language\.$#'
-			identifier: property.notFound
-			count: 1
-			path: app/Console/Commands/IndexSearchCommand.php
-
-		-
-			message: '#^Access to an undefined property App\\Models\\Article\:\:\$title\.$#'
-			identifier: property.notFound
-			count: 1
-			path: app/Console/Commands/IndexSearchCommand.php
 
 		-
 			message: '#^Access to an undefined property Illuminate\\Database\\Eloquent\\Builder\|Illuminate\\Database\\Eloquent\\Model\:\:\$city\.$#'
@@ -133,12 +109,6 @@ parameters:
 			path: app/Http/Controllers/Admin/UserController.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:findOrFail\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 3
-			path: app/Http/Controllers/Admin/UserController.php
-
-		-
 			message: '#^Method App\\Http\\Controllers\\Admin\\UserController\:\:destroy\(\) has no return type specified\.$#'
 			identifier: missingType.return
 			count: 1
@@ -193,18 +163,6 @@ parameters:
 			path: app/Http/Controllers/AiController.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\AiDocument\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/AiController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\AiQuery\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/AiController.php
-
-		-
 			message: '#^Method App\\Http\\Controllers\\AiController\:\:ask\(\) has no return type specified\.$#'
 			identifier: missingType.return
 			count: 1
@@ -223,20 +181,20 @@ parameters:
 			path: app/Http/Controllers/AiController.php
 
 		-
+			message: '#^Access to an undefined property App\\Models\\Lawyer\:\:\$user\.$#'
+			identifier: property.notFound
+			count: 1
+			path: app/Http/Controllers/AppointmentController.php
+
+		-
 			message: '#^Call to an undefined method Illuminate\\Contracts\\Routing\\ResponseFactory\|Illuminate\\Http\\Response\:\:json\(\)\.$#'
 			identifier: method.notFound
 			count: 1
 			path: app/Http/Controllers/AppointmentController.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\Appointment\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/AppointmentController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\Lawyer\:\:find\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Left side of && is always true\.$#'
+			identifier: booleanAnd.leftAlwaysTrue
 			count: 1
 			path: app/Http/Controllers/AppointmentController.php
 
@@ -245,18 +203,6 @@ parameters:
 			identifier: missingType.return
 			count: 1
 			path: app/Http/Controllers/AppointmentController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\Article\:\:find\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/ArticlesController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\Article\:\:latest\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/ArticlesController.php
 
 		-
 			message: '#^Method App\\Http\\Controllers\\ArticlesController\:\:index\(\) has no return type specified\.$#'
@@ -277,14 +223,14 @@ parameters:
 			path: app/Http/Controllers/ArticlesController.php
 
 		-
-			message: '#^Call to an undefined method Illuminate\\Http\\RedirectResponse\|Illuminate\\Routing\\Redirector\:\:intended\(\)\.$#'
-			identifier: method.notFound
+			message: '#^Negated boolean expression is always false\.$#'
+			identifier: booleanNot.alwaysFalse
 			count: 1
-			path: app/Http/Controllers/AuthController.php
+			path: app/Http/Controllers/ArticlesController.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Call to an undefined method Illuminate\\Http\\RedirectResponse\|Illuminate\\Routing\\Redirector\:\:intended\(\)\.$#'
+			identifier: method.notFound
 			count: 1
 			path: app/Http/Controllers/AuthController.php
 
@@ -319,21 +265,15 @@ parameters:
 			path: app/Http/Controllers/AuthController.php
 
 		-
+			message: '#^Access to an undefined property App\\Models\\Message\:\:\$receiver\.$#'
+			identifier: property.notFound
+			count: 1
+			path: app/Http/Controllers/ChatController.php
+
+		-
 			message: '#^Call to an undefined method Illuminate\\Contracts\\Routing\\ResponseFactory\|Illuminate\\Http\\Response\:\:json\(\)\.$#'
 			identifier: method.notFound
 			count: 2
-			path: app/Http/Controllers/ChatController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\Message\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/ChatController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\Message\:\:where\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
 			path: app/Http/Controllers/ChatController.php
 
 		-
@@ -355,16 +295,10 @@ parameters:
 			path: app/Http/Controllers/ChatController.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\Lawyer\:\:find\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Parameter \#1 \$column of static method Illuminate\\Database\\Eloquent\\Model\:\:where\(\) expects string, Closure given\.$#'
+			identifier: argument.type
 			count: 1
-			path: app/Http/Controllers/LawyerController.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\Lawyer\:\:limit\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: app/Http/Controllers/LawyerController.php
+			path: app/Http/Controllers/ChatController.php
 
 		-
 			message: '#^Method App\\Http\\Controllers\\LawyerController\:\:index\(\) has no return type specified\.$#'
@@ -381,6 +315,12 @@ parameters:
 		-
 			message: '#^Method App\\Http\\Controllers\\LawyerController\:\:show\(\) has parameter \$id with no type specified\.$#'
 			identifier: missingType.parameter
+			count: 1
+			path: app/Http/Controllers/LawyerController.php
+
+		-
+			message: '#^Negated boolean expression is always false\.$#'
+			identifier: booleanNot.alwaysFalse
 			count: 1
 			path: app/Http/Controllers/LawyerController.php
 
@@ -493,6 +433,12 @@ parameters:
 			path: app/Models/AiDocument.php
 
 		-
+			message: '#^Class App\\Models\\AiQuery has PHPDoc tag @property for property \$metadata with no value type specified in iterable type array\.$#'
+			identifier: missingType.iterableValue
+			count: 1
+			path: app/Models/AiQuery.php
+
+		-
 			message: '#^Method App\\Models\\AiQuery\:\:user\(\) has no return type specified\.$#'
 			identifier: missingType.return
 			count: 1
@@ -527,6 +473,12 @@ parameters:
 			identifier: missingType.return
 			count: 1
 			path: app/Models/Article.php
+
+		-
+			message: '#^Class App\\Models\\Lawyer has PHPDoc tag @property for property \$documents with no value type specified in iterable type array\.$#'
+			identifier: missingType.iterableValue
+			count: 1
+			path: app/Models/Lawyer.php
 
 		-
 			message: '#^Method App\\Models\\Lawyer\:\:analytics\(\) has no return type specified\.$#'
@@ -661,62 +613,14 @@ parameters:
 			path: app/Providers/GeminiServiceProvider.php
 
 		-
-			message: '#^Method App\\Services\\GeminiService\:\:askQuestion\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Method App\\Services\\GeminiService\:\:request\(\) has parameter \$options with no value type specified in iterable type array\.$#'
+			message: '#^Method App\\Services\\GeminiService\:\:askQuestion\(\) return type has no value type specified in iterable type array\.$#'
 			identifier: missingType.iterableValue
 			count: 1
 			path: app/Services/GeminiService.php
 
 		-
-			message: '#^Method App\\Services\\GeminiService\:\:request\(\) return type has no value type specified in iterable type array\.$#'
+			message: '#^Method App\\Services\\GeminiService\:\:summarize\(\) return type has no value type specified in iterable type array\.$#'
 			identifier: missingType.iterableValue
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Method App\\Services\\GeminiService\:\:summarize\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Method App\\Services\\GeminiService\:\:summarize\(\) has parameter \$documentFiles with no value type specified in iterable type array\.$#'
-			identifier: missingType.iterableValue
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Property App\\Services\\GeminiService\:\:\$apiKey has no type specified\.$#'
-			identifier: missingType.property
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Property App\\Services\\GeminiService\:\:\$baseUrl has no type specified\.$#'
-			identifier: missingType.property
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Property App\\Services\\GeminiService\:\:\$client has no type specified\.$#'
-			identifier: missingType.property
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Property App\\Services\\GeminiService\:\:\$retries has no type specified\.$#'
-			identifier: missingType.property
-			count: 1
-			path: app/Services/GeminiService.php
-
-		-
-			message: '#^Property App\\Services\\GeminiService\:\:\$timeout has no type specified\.$#'
-			identifier: missingType.property
 			count: 1
 			path: app/Services/GeminiService.php
 
@@ -877,14 +781,8 @@ parameters:
 			path: database/migrations/2025_10_20_000013_create_laravel_notifications_table.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\Article\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: database/seeders/ArticleSeeder.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:where\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Access to an undefined property object\:\:\$id\.$#'
+			identifier: property.notFound
 			count: 1
 			path: database/seeders/ArticleSeeder.php
 
@@ -901,26 +799,20 @@ parameters:
 			path: database/seeders/DatabaseSeeder.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:firstOrCreate\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 1
-			path: database/seeders/DevUserSeeder.php
-
-		-
 			message: '#^Method Database\\Seeders\\DevUserSeeder\:\:run\(\) has no return type specified\.$#'
 			identifier: missingType.return
 			count: 1
 			path: database/seeders/DevUserSeeder.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\Lawyer\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Static method Illuminate\\Database\\Eloquent\\Model\:\:firstOrCreate\(\) invoked with 2 parameters, 1 required\.$#'
+			identifier: arguments.count
 			count: 1
-			path: database/seeders/LawyerSeeder.php
+			path: database/seeders/DevUserSeeder.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:where\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Access to an undefined property object\:\:\$id\.$#'
+			identifier: property.notFound
 			count: 1
 			path: database/seeders/LawyerSeeder.php
 
@@ -929,12 +821,6 @@ parameters:
 			identifier: missingType.return
 			count: 1
 			path: database/seeders/LawyerSeeder.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 3
-			path: database/seeders/UserSeeder.php
 
 		-
 			message: '#^Method Database\\Seeders\\UserSeeder\:\:run\(\) has no return type specified\.$#'
@@ -949,6 +835,12 @@ parameters:
 			path: routes/api.php
 
 		-
+			message: '#^Access to an undefined property object\:\:\$email\.$#'
+			identifier: property.notFound
+			count: 2
+			path: routes/web.php
+
+		-
 			message: '#^Call to an undefined method Illuminate\\Contracts\\Routing\\ResponseFactory\|Illuminate\\Http\\Response\:\:json\(\)\.$#'
 			identifier: method.notFound
 			count: 2
@@ -961,13 +853,7 @@ parameters:
 			path: routes/web.php
 
 		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:create\(\)\.$#'
-			identifier: staticMethod.notFound
-			count: 2
-			path: routes/web.php
-
-		-
-			message: '#^Call to an undefined static method App\\Models\\User\:\:where\(\)\.$#'
-			identifier: staticMethod.notFound
+			message: '#^Parameter \#1 \$user of static method Illuminate\\Support\\Facades\\Auth\:\:login\(\) expects Illuminate\\Contracts\\Auth\\Authenticatable, object given\.$#'
+			identifier: argument.type
 			count: 2
 			path: routes/web.php
