ci: run phpunit against tests directory to ensure tests execute when phpunit.xml is absent

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -51,9 +51,4 @@ jobs:
           php artisan migrate --force || true
 
       - name: Run PHPUnit
-        run: |
-          if [ -f phpunit.xml ]; then
-            vendor/bin/phpunit --configuration phpunit.xml --testsuite=Unit --colors=never
-          else
-            vendor/bin/phpunit --testsuite=Unit --colors=never
-          fi
+        run: vendor/bin/phpunit tests --colors=never
