chore(phpstan): include generated baseline

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ includes:
     - vendor/nunomaduro/larastan/extension.neon
 
 parameters:
+    baseline: phpstan-baseline.neon
     level: 7
     # Removed local stubs because Larastan provides compatible stubs that otherwise
     # caused duplicate class declaration errors. If you need project-specific
