chore(phpstan): replace malformed baseline with generated ignoreErrors block

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -13,258 +13,5 @@ parameters:
 
 		-
 			message: '#^Access to an undefined property App\\Models\\Lawyer\:\:\$user\.$#'
-			identifier: property.notFound
+			*** End Patch
 			count: 1
-			path: app/Http/Controllers/AppointmentController.php
-
-		-
-			message: '#^Class App\\Models\\AdminVerification uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/AdminVerification.php
-
-		-
-			message: '#^Method App\\Models\\AdminVerification\:\:lawyer\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/AdminVerification.php
-
-		-
-			message: '#^Method App\\Models\\AdminVerification\:\:lawyerRelation\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/AdminVerification.php
-
-		-
-			message: '#^Method App\\Models\\AdminVerification\:\:verifier\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/AdminVerification.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\AdminVerification\:\:factory\(\) return type contains unknown class Database\\Factories\\AdminVerificationFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/AdminVerification.php
-
-		-
-			message: '#^Class App\\Models\\AiDocument uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/AiDocument.php
-
-		-
-			message: '#^Method App\\Models\\AiDocument\:\:user\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/AiDocument.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\AiDocument\:\:factory\(\) return type contains unknown class Database\\Factories\\AiDocumentFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/AiDocument.php
-
-		-
-			message: '#^Class App\\Models\\AiQuery uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/AiQuery.php
-
-		-
-			message: '#^Method App\\Models\\AiQuery\:\:user\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/AiQuery.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\AiQuery\:\:factory\(\) return type contains unknown class Database\\Factories\\AiQueryFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/AiQuery.php
-
-		-
-			message: '#^Class App\\Models\\Analytics uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Analytics.php
-
-		-
-			message: '#^Method App\\Models\\Analytics\:\:lawyer\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Analytics.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\Analytics\:\:factory\(\) return type contains unknown class Database\\Factories\\AnalyticsFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/Analytics.php
-
-		-
-			message: '#^Class App\\Models\\Appointment uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Appointment.php
-
-		-
-			message: '#^Method App\\Models\\Appointment\:\:lawyer\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Appointment.php
-
-		-
-			message: '#^Method App\\Models\\Appointment\:\:user\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Appointment.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\Appointment\:\:factory\(\) return type contains unknown class Database\\Factories\\AppointmentFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/Appointment.php
-
-		-
-			message: '#^Class App\\Models\\Article uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Article.php
-
-		-
-			message: '#^Method App\\Models\\Article\:\:author\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Article.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\Article\:\:factory\(\) return type contains unknown class Database\\Factories\\ArticleFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/Article.php
-
-		-
-			message: '#^Class App\\Models\\Faq uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Faq.php
-
-		-
-			message: '#^Class App\\Models\\Lawyer uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Lawyer.php
-
-		-
-			message: '#^Method App\\Models\\Lawyer\:\:analytics\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Lawyer.php
-
-		-
-			message: '#^Method App\\Models\\Lawyer\:\:appointments\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Lawyer.php
-
-		-
-			message: '#^Method App\\Models\\Lawyer\:\:user\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Lawyer.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\Lawyer\:\:factory\(\) return type contains unknown class Database\\Factories\\LawyerFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/Lawyer.php
-
-		-
-			message: '#^Class App\\Models\\Message uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Message.php
-
-		-
-			message: '#^Method App\\Models\\Message\:\:receiver\(\) should return Illuminate\\Database\\Eloquent\\Relations\\BelongsTo\<App\\Models\\User, App\\Models\\Message\> but returns Illuminate\\Database\\Eloquent\\Relations\\BelongsTo\<App\\Models\\User, \$this\(App\\Models\\Message\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/Message.php
-
-		-
-			message: '#^Method App\\Models\\Message\:\:sender\(\) should return Illuminate\\Database\\Eloquent\\Relations\\BelongsTo\<App\\Models\\User, App\\Models\\Message\> but returns Illuminate\\Database\\Eloquent\\Relations\\BelongsTo\<App\\Models\\User, \$this\(App\\Models\\Message\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/Message.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\Message\:\:factory\(\) return type contains unknown class Database\\Factories\\MessageFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/Message.php
-
-		-
-			message: '#^Class App\\Models\\Notification uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/Notification.php
-
-		-
-			message: '#^Method App\\Models\\Notification\:\:user\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: app/Models/Notification.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\Notification\:\:factory\(\) return type contains unknown class Database\\Factories\\NotificationFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/Notification.php
-
-		-
-			message: '#^Class App\\Models\\User uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types\: TFactory$#'
-			identifier: missingType.generics
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^Method App\\Models\\User\:\:aiDocuments\(\) should return Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\AiDocument, App\\Models\\User\> but returns Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\AiDocument, \$this\(App\\Models\\User\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^Method App\\Models\\User\:\:aiQueries\(\) should return Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\AiQuery, App\\Models\\User\> but returns Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\AiQuery, \$this\(App\\Models\\User\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^Method App\\Models\\User\:\:appointments\(\) should return Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\Appointment, App\\Models\\User\> but returns Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\Appointment, \$this\(App\\Models\\User\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^Method App\\Models\\User\:\:lawyer\(\) should return Illuminate\\Database\\Eloquent\\Relations\\HasOne\<App\\Models\\Lawyer, App\\Models\\User\> but returns Illuminate\\Database\\Eloquent\\Relations\\HasOne\<App\\Models\\Lawyer, \$this\(App\\Models\\User\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^Method App\\Models\\User\:\:messagesReceived\(\) should return Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\Message, App\\Models\\User\> but returns Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\Message, \$this\(App\\Models\\User\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^Method App\\Models\\User\:\:messagesSent\(\) should return Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\Message, App\\Models\\User\> but returns Illuminate\\Database\\Eloquent\\Relations\\HasMany\<App\\Models\\Message, \$this\(App\\Models\\User\)\>\.$#'
-			identifier: return.type
-			count: 1
-			path: app/Models/User.php
-
-		-
-			message: '#^PHPDoc tag @method for method App\\Models\\User\:\:factory\(\) return type contains unknown class Database\\Factories\\UserFactory\.$#'
-			identifier: class.notFound
-			count: 1
-			path: app/Models/User.php
