--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -203,3 +203,9 @@ parameters:
 			identifier: missingType.generics
 			count: 1
 			path: app/Models/User.php
+
+		-
+			message: '#^If condition is always false\.$#'
+			identifier: if.alwaysFalse
+			count: 1
+			path: scripts/check_command_autoload.php
