chore(phpstan): make HasFactory non-generic, suppress relation return.type warnings, fix script ignores

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,8 @@ includes:
 parameters:
     level: 7
     reportUnmatchedIgnoredErrors: false
+    stubFiles:
+        - phpstan-stubs/hasfactory.php
     # Removed local stubs because Larastan provides compatible stubs that otherwise
     # caused duplicate class declaration errors. If you need project-specific
     # stubs, add them carefully to avoid conflicts with vendor stubs.
