--- a/phpstan.nobaseline.neon
+++ b/phpstan.nobaseline.neon
@@ -3,9 +3,12 @@ includes:
 
 parameters:
     level: 7
+    reportUnmatchedIgnoredErrors: false
     # Removed local stubs because Larastan provides compatible stubs that otherwise
     # caused duplicate class declaration errors. If you need project-specific
     # stubs, add them carefully to avoid conflicts with vendor stubs.
+    stubFiles:
+        - phpstan-stubs/hasfactory.php
     ignoreErrors:
         - message: '#If condition is always false\\.#'
           path: scripts/check_command_autoload.php
