ci: enable APP_DEBUG and upload laravel.log for PHPUnit debugging (temporary)

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   phpunit:
     runs-on: ubuntu-latest
+    env:
+      APP_DEBUG: "true"
 
     steps:
       - name: Checkout repository
@@ -52,3 +54,16 @@ jobs:
 
       - name: Run PHPUnit
         run: vendor/bin/phpunit tests --colors=never
+
+      - name: Show Laravel log (for debugging)
+        if: always()
+        run: |
+          echo '--- Laravel log (tail) ---'
+          if [ -f storage/logs/laravel.log ]; then tail -n 200 storage/logs/laravel.log; else echo 'no laravel.log found'; fi
+
+      - name: Upload Laravel log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: laravel-log
+          path: storage/logs/laravel.log
