--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
+    "phpunit/phpunit": "11.5",
     "fakerphp/faker": "^1.24",
     "phpstan/phpstan": "^2.1",
     "larastan/larastan": "^3.8"
