chore: add MIT license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "mdsoroarjahan/lawlite",
   "description": "LawLite - Bilingual legal consultation platform",
+  "license": "MIT",
   "type": "project",
   "require": {
   "php": "^8.1",
