--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "phpunit/phpunit": "11.5",
     "fakerphp/faker": "^1.24",
     "phpstan/phpstan": "^2.1",
-    "larastan/larastan": "^3.8"
+    "larastan/larastan": "^3.8",
+    "mockery/mockery": "^1.6"
   }
   ,
   "scripts": {
