Fix AI integration to use actual Google Gemini API

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ SESSION_COOKIE=LawLite_session
 ELASTICSEARCH_HOST=http://localhost:9200
 
 GEMINI_API_KEY=AIzaSyAAbmtvEPbGxj7tNcq85-DtyqtinHTOeRE
-GEMINI_API_URL=https://api.gemini.example/v1
+GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta
 GEMINI_DEFAULT_LANGUAGE=en
 GEMINI_TIMEOUT=30
 GEMINI_RETRIES=2
