Implement chat UI and messaging functionality, including real-time updates and audio calling features; add landing page layout and footer; create payment integration test for SSLCommerz booking process.

--- a/.env
+++ b/.env
@@ -32,3 +32,8 @@ PUSHER_APP_ID=2067467
 PUSHER_APP_KEY=28d1316ea6f7bd510dd5
 PUSHER_APP_SECRET=ccccbda74c0b69596e8d
 PUSHER_APP_CLUSTER=mt1
+
+SSLCOMMERZ_STORE_ID=testbox
+SSLCOMMERZ_STORE_PASSWORD=qwerty
+SSLCOMMERZ_CONNECT_FROM_LOCALHOST=true
+SSLCOMMERZ_IS_SANDBOX=true
